[gd_scene load_steps=19 format=3 uid="uid://bevvq8dlvdjip"]

[ext_resource type="Texture2D" uid="uid://flm0ssvuccmi" path="res://assets/sprites/level_objects/stalactite.png" id="1_kttog"]
[ext_resource type="Script" path="res://scripts/stalactite.gd" id="1_nmj2m"]
[ext_resource type="PackedScene" uid="uid://cj5ky0bvhedwe" path="res://scenes/player/hurt_player_area.tscn" id="2_nqyc6"]
[ext_resource type="Texture2D" uid="uid://c115fn07p0kyp" path="res://assets/sprites/vfx/stalactite_pieces.png" id="4_dsu85"]
[ext_resource type="AudioStream" uid="uid://ch4pjoyk1jt63" path="res://assets/sound effects/level_object_sounds/stalactite.mp3" id="5_4vsxe"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ucilh"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_ngn05"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_p5kj2"]
radius = 3.0

[sub_resource type="Animation" id="Animation_ovc7j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_expy6"]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_eogp4"]
resource_name = "fall"
length = 0.6
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 4
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.139626, -0.139626]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fs65l"]
_data = {
"RESET": SubResource("Animation_ovc7j"),
"fade_in": SubResource("Animation_expy6"),
"fall": SubResource("Animation_eogp4")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_epxyl"]
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 2
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_nay0b"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.494505), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_sg3fj"]
offsets = PackedFloat32Array(0.208333, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_43w5w"]
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 2
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_kv3q7"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.604396), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_0y8os"]
offsets = PackedFloat32Array(0, 0.135417, 0.760417, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[node name="stalactite" type="Area2D" groups=["enemy_projectile"]]
z_index = 6
collision_layer = 4
collision_mask = 2
script = ExtResource("1_nmj2m")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="." groups=["enemy_projectile"]]
replication_config = SubResource("SceneReplicationConfig_ucilh")

[node name="PlayerCollider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ngn05")

[node name="HurtPlayerArea" parent="." instance=ExtResource("2_nqyc6")]
damage = 10
knock_back_force = 45

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtPlayerArea"]
position = Vector2(0, -2)
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_p5kj2")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_kttog")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 64)
collision_mask = 2

[node name="FallTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
deterministic = true
libraries = {
"": SubResource("AnimationLibrary_fs65l")
}

[node name="FallingParticles" type="CPUParticles2D" parent="."]
z_index = -1
material = SubResource("CanvasItemMaterial_epxyl")
position = Vector2(0, -8)
emitting = false
lifetime_randomness = 0.5
texture = ExtResource("4_dsu85")
emission_shape = 3
emission_rect_extents = Vector2(4, 1)
direction = Vector2(0, -1)
gravity = Vector2(0, 90)
initial_velocity_min = 12.0
initial_velocity_max = 20.0
damping_min = 15.0
damping_max = 15.0
angle_min = -720.0
angle_max = 720.0
scale_amount_curve = SubResource("Curve_nay0b")
color_ramp = SubResource("Gradient_sg3fj")
anim_offset_max = 1.0

[node name="IdleParticles" type="CPUParticles2D" parent="."]
z_index = -1
material = SubResource("CanvasItemMaterial_43w5w")
amount = 2
lifetime = 2.0
explosiveness = 0.6
randomness = 0.8
lifetime_randomness = 0.6
texture = ExtResource("4_dsu85")
emission_shape = 3
emission_rect_extents = Vector2(4, 1)
gravity = Vector2(0, 90)
angle_min = -45.0
angle_max = 45.0
scale_amount_curve = SubResource("Curve_kv3q7")
color_ramp = SubResource("Gradient_0y8os")
anim_offset_max = 1.0

[node name="LooseRockAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_4vsxe")
attenuation = 6.5
bus = &"SFX"

[connection signal="timeout" from="FallTimer" to="." method="_on_fall_timer_timeout"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
